# cansixt-blog

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  config.toml  spin.toml
.github/workflows/: build-deploy.yml
content/: _index.ca.md  _index.md  gerard.md  privacy-policy.md
content/posts/: 2023-03-09-the-first-post.md  2023-09-09-the-tech-stack.md  2025-01-05-enabling-comments-from-fediverse.md
src/: lib.rs
static/js/: cookieconsent-init.js  cookieconsent.js
templates/: 404.html  author.html  base.html  custom_macros.html  index.html  privacy_policy.html
templates/shortcodes/: comments.html  video.html
