[package]
name = "cansixt-blog"
authors = ["Gerard CL <gerardcl@gmail.com>"]
description = "Can Sixt Blog engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1.0"
# Crate to simplify working with bytes.
bytes = "1.9"
# General-purpose crate with common HTTP types.
http = "1.2"
# The Spin SDK.
spin-sdk = { version = "3.1" }